<resources>
    <string name="app_name">Doar</string>
    <string-array name="gender_options">
        <item>Female</item>
        <item>Male</item>
        <item>Prefer not to say</item>
    </string-array>
    <string name="logo_desc">Doar logo</string>
    <string name="labels_icon_desc">label_icon</string>
    <string name="inbox_icon_desc">inbox_icon</string>
    <string name="sent_icon_desc">sent_icon</string>
    <string name="spam_icon_desc">spam_icon</string>
    <string name="trash_icon_desc">trash_icon</string>
    <string name="drafts_icon_desc">draft_icon</string>
    <string name="starred_icon_desc">star_icon</string>
    <string name="all_icon_desc">all_mail_icon</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="starred">Starred</string>
    <string name="all">All Doar</string>
    <string name="labels">Labels</string>
    <string name="add_btn_desc">Add Label</string>
    <string name="avatar_desc">avatar photo</string>
    <string name="sender_name">Sender Name</string>
    <string name="subject">Subject</string>
    <string name="body_prev">Body preview...</string>
    <string name="time">12:34</string>
    <string name="label_name">LabelName</string>
    <string name="star_icon">Star</string>
    <string name="label_mail">Label Mail</string>
    <string name="label_icon">Label icon</string>
    <string name="edit_label">Edit Label</string>
    <string name="color_choice">Choose color circle</string>
    <string name="username_example">user@doar.com</string>
    <string name="hi_user">Hi, User</string>
    <string name="see_details">See Profile Details</string>
    <string name="log_out">Log out</string>
    <string name="log_out_icon">Log out icon</string>
    <string name="little_generic_avatar">little generic avatar photo</string>
    <string name="x_icon">Close</string>
    <string name="profile_details">Profile Details</string>
    <string name="first_name">First Name:</string>
    <string name="not_provided">Not provided</string>
    <string name="last_name">Last Name:</string>
    <string name="mail">Mail:</string>
    <string name="phone">Phone:</string>
    <string name="birthday">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="create_label">Create New Label</string>
    <string name="the_label_name">Label name:</string>
    <string name="enter_label_name">Enter label name</string>
    <string name="choose_color">Choose color:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="example_subject">Subject: Sample Email Subject</string>
    <string name="from">From: </string>
    <string name="example_sender_name">John Doe</string>
    <string name="example_sender_mail">&lt;john@doar.com&gt;</string>
    <string name="to">To: </string>
    <string name="example_receiver_name">Jane Smith</string>
    <string name="example_receiver_mail">&lt;jane@doar.com&gt;</string>
    <string name="date">Date: </string>
    <string name="example_date">July 14, 2025 at 7:41 PM</string>
    <string name="example_body_content">This is the mail body content. It can be quite long and will scroll if needed.</string>
    <string name="attachments">Attachments: </string>
    <string name="star_mail">Star mail</string>
    <string name="report_spam">Report spam</string>
    <string name="delete_mail">Delete mail</string>
    <string name="restore_mail">Restore mail</string>
    <string name="hidden_avatar">hidden avatar that needed for the code</string>
    <string name="select_label">Select label</string>
    <string name="ok">OK</string>
    <string name="label_color">Label color:</string>
    <string name="save">Save</string>
    <string name="delete_label">Delete Label</string>
    <string name="confirm_label_delete">Are you sure you want to delete this label?</string>
    <string name="delete">Delete</string>
    <string name="label_color_no_dots">Label Color</string>
    <string name="edit">Edit</string>
    <string name="add_sub_label">Add sub label</string>
    <string name="plus_icon">add label icon</string>
    <string name="edit_icon">Edit label icon</string>
    <string name="trash_icon">delete label icon</string>
    <string name="create_account">Create a Doar Account</string>
    <string name="first_name_register">First Name</string>
    <string name="last_name_register">Last Name (Optional)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birth_date">"Birth Date (YYYY-MM-DD)</string>
    <string name="gender_register">Gender</string>
    <string name="choose_profile">Choose Profile Photo</string>
    <string name="continue_word">Continue</string>
    <string name="have_account">Already have an account? </string>
    <string name="sign_in">Sign in</string>
    <string name="menu_desc">Menu</string>
    <string name="search_mail">Search mail</string>
    <string name="clear_search">Clear search</string>
    <string name="profile_desc">Profile</string>
    <string name="close_selection">"Close selection</string>
    <string name="one_selected">1 selected</string>
    <string name="delete_desc">Delete</string>
    <string name="label_desc">Label</string>
    <string name="no_mails_found">No emails found</string>
    <string name="empty_mailbox">Your mailbox is empty</string>
    <string name="compose_icon_desc">Compose email</string>
    <string name="doar_mail">Doar Mail</string>
    <string name="sign_in_to_account">Sign in to your Doar account</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="send_mail">Send Email</string>
    <string name="attach_file">Attach File</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="close_compose">Close Compose</string>
    <string name="to_hint">To</string>
    <string name="body">Body...</string>

</resources>